[gd_scene load_steps=4 format=2]

[ext_resource path="res://Enemies/Securibot/Scripts/Securibot.gd" type="Script" id=1]
[ext_resource path="res://Enemies/Securibot/Animation/Securibot.tres" type="SpriteFrames" id=2]

[sub_resource type="RectangleShape2D" id=1]

[node name="Securibot" type="KinematicBody2D"]
input_pickable = true
script = ExtResource( 1 )

[node name="Collider" type="CollisionShape2D" parent="."]
scale = Vector2( 0.6, 0.9 )
shape = SubResource( 1 )

[node name="Visual" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "Run"
frame = 1
playing = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Area" type="Area2D" parent="."]
position = Vector2( 0, -1 )

[node name="Collider" type="CollisionShape2D" parent="Area"]
scale = Vector2( 0.75, 1 )
shape = SubResource( 1 )

[node name="LedgeCheck0" type="Area2D" parent="."]
position = Vector2( 0, -1 )

[node name="Collider" type="CollisionShape2D" parent="LedgeCheck0"]
position = Vector2( -5, 11 )
scale = Vector2( 0.1, 0.1 )
shape = SubResource( 1 )

[node name="LedgeCheck1" type="Area2D" parent="."]
position = Vector2( 0, -1 )

[node name="Collider" type="CollisionShape2D" parent="LedgeCheck1"]
position = Vector2( 5, 11 )
scale = Vector2( 0.1, 0.1 )
shape = SubResource( 1 )

[node name="LedgeCheckCooldown" type="Timer" parent="."]
wait_time = 0.5
[connection signal="timeout" from="DeathTimer" to="." method="OnDeath"]
[connection signal="body_entered" from="Area" to="." method="OnBodyEnter"]
[connection signal="body_exited" from="LedgeCheck0" to="." method="OnBodyExit"]
[connection signal="body_exited" from="LedgeCheck1" to="." method="OnBodyExit"]
[connection signal="timeout" from="LedgeCheckCooldown" to="." method="OnLedgeCheckReady"]
